Added slug parameter for pad
